--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 :root
 
-{--color1: #E1C899;
---color2: #222222;}
-
-/*color #E1C899*/
+{--color1: #E96043;
+--color2: #1E171A;}
 
 *
 
@@ -15,8 +13,9 @@ html
 
 body
 
-{font-family: Roboto;
-background-color: var(--color1);}
+{font-family: 'Avenir', sans-serif;
+background-color: black;;
+font-weight: normal;}
 
 header
 
@@ -36,41 +35,43 @@ width: 100%;
 color: white;
 z-index: -1;}
 
-#inicio h1 
-
-{color: var(--color1);}
-
 h1
 
 {font-size: 3em;
-font-weight: bold;
+font-family: 'Fjalla One', sans-serif;
 text-align: center;
-color: black;
-text-shadow: 0.1em 0.1em 0.2em #090909;}
+color: var(--color1);}
+
+h2
+
+{font-weight: bold;
+font-family: 'Fjalla One', sans-serif;}
 
 #inicio
 
 {position: relative;
 width: 100%;
 padding-top: 50px;
-padding-bottom: 50px;
-background-image: url("media/triangulo.jpg");}
+padding-bottom: 30px;
+background-color: var(--color2);}
 
 .video
 
-{width: 80%;
+{width: 75%;
 height: 75vh;
 display: block;
-margin: 0 auto;}
+margin: 30px auto;}
 
 .texto-documental
 
-{font-weight: bold;
-background-color: var(--color1);
-color: black;
+{background-color: black;
+font-family: 'Fjalla One', sans-serif;
+color: var(--color1);
+margin: 0 auto;
 width: 60%;
-margin: 20px auto;
-padding: 10px;}
+padding: 10px;
+font-size: 1.2em;
+text-align: center;}
 
 .imagen-1
 
@@ -129,15 +130,13 @@ opacity: 90%;}
 
 #bio
 
-{background-color: #CAB48A;
-margin: 0 auto;
+{margin: 0 auto;
 padding-top: 30px;
-padding-bottom: 60px;}
+background-color: var(--color2);}
 
 #bio p, #bio li
 
-{font-weight: bold;
-color: black;}
+{color: black;}
 
 #bio li
 
@@ -145,46 +144,64 @@ color: black;}
 
 #bio .container
 
-{display:flex;
+{background-color: #EEEEEE;
+display:flex;
 align-items: flex-start;
-justify-content: space-around;}
+justify-content: space-around;
+width: 100%;
+margin: 0 auto;
+padding-bottom: 60px;}
 
 .bio-texto
 
-{max-width: 600px;}
+{max-width: 600px;
+padding: 10px;}
 
 .musicos
 
 {color: black;
-text-align: center;}
+background-color: #EEEEEE;
+text-align: center;
+padding: 10px;}
 
-h3
+.integrantes h3
 
-{margin-bottom: 0;}
+{margin-bottom: 0;
+font-weight: normal;
+font-family: 'Fjalla One', sans-serif;}
 
-h4
+.integrantes h4
 
 {padding-top: 0;
 margin-top: 0;
 font-size: 0.9em;
-opacity: 0.7;}
+font-weight: normal;;}
 
 .colaboradores
 
 {text-align: center;
-color: black;}
+color: black;
+background-color: #EEEEEE;
+padding: 10px;}
 
 #shows
 
 {width: 100%;
 background-color: var(--color2);
 text-align: center;
-padding-top: 30px;
+padding-top: 30px;}
+
+#shows .container
+
+{color: white;
+padding-top: 10px;
+padding-left: 10px;
+padding-right: 10px;
 padding-bottom: 30px;}
 
-#shows h3 
+#shows h1
 
-{color: white;}
+{color: var(--color1);}
 
 hr
 
@@ -193,30 +210,35 @@ hr
 #shows a
 
 {text-decoration: none;
-font-weight: bold;
+font-weight: normal;
+font-size: 1.3em;
+font-family: 'Fjalla One', sans-serif;
 color: black;
-background-color: #CAB48A;
+background-color: var(--color1);
 padding: 5px;
-border-radius:5px; }
+border-radius:5px;}
 
 #shows a:hover
 
-{background-color: #111111;;
-color: #CAB48A;}
+{background-color: black;
+color: var(--color1);}
 
-#shows h1
-
-{color: var(--color1);}
 
 .show
 
 {padding-bottom: 15px;}
 
+.show h3
+
+{font-family: 'Fjalla One', sans-serif;
+font-weight: normal;
+font-size: 1.2em;}
+
 #galeria
 
 {background-color: var(--color2);
-padding-top: 30px;
-padding-bottom: 50px;}
+padding-top: 40px;
+padding-bottom: 60px;}
 
 #galeria h1
 
@@ -233,7 +255,7 @@ align-items: center;}
 
 {width: 300px;
 height: 200px;
-border: 1px solid var(--color1);
+border: 1px solid white;
 box-shadow: 2px 2px 10px rgba(0,0,0,0.5);}
 
 .foto:hover
@@ -263,25 +285,36 @@ height: 200px;}
 #videoclips a
 
 {text-decoration: none;
+font-family: 'Fjalla One', sans-serif;
+font-size: 1.3em;
 color: black;
-background-color: #CAB48A;
+background-color: var(--color1);
 padding: 15px;
-font-weight: bold;
+font-weight: normal;
 border-radius: 5px;
 text-align: center;
 width: 130px;
 }
 
+#videoclips a:hover
+
+{color: var(--color1);
+background-color: black;}
+
 #discos
 
 {background-color: var(--color2);
 padding-top: 30px;
-padding-bottom: 50px;
 width: 100%;}
 
 #discos h1 
 
 {color:var(--color1);}
+
+#discos .fila-1
+
+{padding-top: 50px;
+padding-bottom: 100px;}
 
 .img-disco
 
@@ -297,22 +330,41 @@ justify-content: center;}
 
 .disco h4
 
-{text-align: center;}
+{text-align: center;
+font-family: 'Fjalla One', sans-serif;
+font-weight: normal;
+font-size: 1.1em;}
 
 #contacto
 
 {background-color: var(--color2);
-padding-top: 90px;
-padding-bottom: 40px;
+padding-top: 30px;
 text-align: center;}
+
+#contacto .container
+
+{width: 100%;
+background-color: black;
+color: white;
+padding-top: 30px;
+padding-left: 30px;
+padding-right: 30px;
+padding-bottom: 50px;
+margin-bottom: 30px;}
 
 #contacto h1
 
 {color: var(--color1);}
 
+#contacto h3
+
+{font-family: 'Fjalla One', sans-serif;
+font-weight: normal;
+font-size: 1.4em;}
+
 footer
 
-{background-color: var(--color1);
+{background-color: var(--color1);;
 position: fixed;
 bottom: 0;
 left: 0;
@@ -320,7 +372,8 @@ width: 100vw;
 height: 40px;
 display: flex;
 align-items: center;
-justify-content: space-between;}
+justify-content: space-between;
+font-family: 'Fjalla One', sans-serif;}
 
 .nav
 
@@ -334,9 +387,9 @@ li
 .nav li a
 
 {color: var(--color1);
-background-color: var(--color2);
+background-color: black;
 font-weight: bold;
-font-size: 1.9em;
+font-size: 1.6em;
 height: 40px;
 padding: 0 10px;
 text-decoration: none;
@@ -344,7 +397,7 @@ display: block;}
 
 .nav li a:hover
 
-{color: var(--color2);
+{color: black;
 background-color: var(--color1);}
 
 .nav li ul
@@ -440,7 +493,11 @@ footer
 
 {display: none;}
 
-#bio, .texto-documental
+.texto-documental
+
+{font-size: 1em;}
+
+#bio
 
 {font-size: 0.9em;}
 
@@ -506,13 +563,9 @@ h1
 
 {font-size: 2em;}
 
-#contacto h2 
-
-{font-size: 0.8em;}
-
 #contacto h3 
 
-{font-size: 0.8em;}
+{font-size: 1em;}
 
 .imagen-4
 
