--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 
 *
 
-{box-sizing: border-box;}
+{box-sizing: border-box;
+font-weight: normal;}
 
 html
 
@@ -13,7 +14,7 @@ html
 
 body
 
-{font-family: 'Avenir', sans-serif;
+{font-family: sans-serif;
 background-color: black;;
 font-weight: normal;}
 
@@ -30,10 +31,7 @@ z-index: 1;}
 
 main
 
-{margin: 0 auto;
-width: 100%;
-color: white;
-z-index: -1;}
+{color: white;}
 
 h1
 
@@ -44,8 +42,7 @@ color: var(--color1);}
 
 h2
 
-{font-weight: bold;
-font-family: 'Fjalla One', sans-serif;}
+{font-family: 'Fjalla One', sans-serif;}
 
 #inicio
 
@@ -233,10 +230,15 @@ border-radius:5px;}
 {background-color: black;
 color: #BF6430;}
 
+.prox
+
+{display:none;
+font-size: 1.9em;
+font-family: 'Fjalla One', sans-serif;}
 
 .show
 
-{display:none;
+{
 padding-bottom: 15px;}
 
 .show h3
@@ -382,7 +384,7 @@ font-size: 1.3em;}
 
 input, textarea
 
-{font-size: 0.8em;
+{font-size: 1em;
 font-family: sans-serif;}
 
 textarea
@@ -454,7 +456,7 @@ font-family: 'Fjalla One', sans-serif;}
 
 .nav
 
-{height: 40px;
+{height: 100%;
 display: flex;    
 align-items: center;}
 
@@ -477,7 +479,7 @@ background-color: black;}
 
 {margin: 30px;
 display: flex;
-height: 40px;
+height: 100%;
 width: 20%;
 justify-content: space-evenly;
 align-items: center;}
@@ -572,8 +574,6 @@ footer {justify-content: center;}
 
 {
 
-.web-logo {display: none;}
-
 .texto-documental
 
 {font-size: 1em;}
@@ -594,15 +594,31 @@ footer {justify-content: center;}
 
 .video
 
-{width: 95%;}
+{width: 90%;}
 
 .imagen-4
 
 {height: 220px;}
 
+#contacto
+
+{width: 100%;}
+
 #contacto .container
 
-{width: 100vw;}
+{width: 90%;}
+
+textarea
+
+{width: 250px;}
+
+}
+
+@media (max-width: 450px)
+
+{
+
+.web-logo {justify-content: center;}
 
 }
 
@@ -610,9 +626,9 @@ footer {justify-content: center;}
 
 {
 
-textarea
+input, textarea
 
-{width: 250px;}
+{font-size: 0.86em;}
 
 .youtube-video
 
